--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "meshline": "^3.3.1",
     "motion": "^12.23.9",
     "next": "14.2.30",
+    "ogl": "^1.0.11",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
